tests/baselines/reference/publicIndexer.errors.txt
==== tests/cases/conformance/classes/indexMemberDeclarations/publicIndexer.ts (3 errors) ====
    // public indexers not allowed
    
    class C {
        public [x: string]: string;
        ~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
    }
    
    class D {
        public [x: number]: string;
        ~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
    }
    
    class E<T> {
        public [x: string]: T;
        ~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
    }